# id3-parser

./: .gitignore  .gitmodules  Cargo.toml
src/: error.rs  main.rs
src/id3/: frame.rs  header.rs  helper.rs  mod.rs
