[package]
name = "id3-parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
binrw = "0.11.2"
clap = { version = "4.3.19", features = ["derive"] }
modular-bitfield = "0.11.2"
tempfile = "3.7.0"
thiserror = "1.0.44"
